--- a/src/scss/maintenance.scss
+++ b/src/scss/maintenance.scss
@@ -1,151 +1,21 @@
 @import "utils/typography";
 @import "utils/vars";
 
+@import "maintenance/maintenance-third-screen";
+@import "maintenance/maintenance-fourth-screen";
+
 .page {
-  &-header {
-    background-image: url("../img/support/support.png");
-    background-size: cover;
-    height: 12.4rem;
-    display: flex;
-    align-items: center;
-  }
-
-  &-blueBtn {
-    @include page-blueBtn;
-    height: 6.75rem;
-    width: 34.6rem;
-    position: relative;
-    left: 54.5%;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    &-arrow {
-      width: 3rem;
-      height: 3rem;
-      object-fit: contain;
-    }
-  }
-
-  &-list {
-    &-cont {
-      padding-top: 3.75rem;
-      padding-bottom: 3.75rem;
-      color: $dark;
-      position: relative;
-      z-index: 2;
-    }
-    &-block {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.5rem;
-      width: 40%;
-    }
-    &-blueTitle {
-      color: $cyan;
-      font-weight: 500;
-      font-size: 5rem;
-      line-height: 1;
-      padding-bottom: 2.5rem;
-    }
-    &-title {
-      font-weight: 500;
-      font-size: 3.12rem;
-      line-height: 1.2;
-    }
-    &-img {
-      width: 2.5rem;
-      height: 2.5rem;
-      object-fit: cover;
-      position: relative;
-      top: 0.7rem;
-    }
-    &-item {
-      display: flex;
-      column-gap: 1.75rem;
-    }
-    &-text {
-      @include page-list-text;
+  &-headerConsultation {
+    &-blueBtn {
+      width: 35rem;
     }
   }
 }
 
 .maintenance {
-  &-list {
-    @include border-top;
-    position: relative;
-  }
-
-  &-imgGirl {
-    position: absolute;
-    bottom: 0%;
-    left: 45%;
-    height: 85%;
-    z-index: 0;
-  }
   &-costs {
     padding-top: 3.75rem;
     padding-bottom: 3.75rem;
-  }
-}
-
-.support {
-  &-care {
-    height: 69rem;
-    background-image: url("../img/support/background-support.png");
-    &-cont {
-      display: flex;
-      padding-top: 7.3rem;
-      padding-bottom: 7.3rem;
-      justify-content: space-between;
-    }
-    &-block {
-      display: flex;
-      flex-direction: column;
-      color: $white;
-      width: 89rem;
-      row-gap: 3.75rem;
-    }
-    &-title {
-      font-weight: 350;
-      font-size: 8.75rem;
-      line-height: 1;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.5rem;
-      line-height: 1.6;
-    }
-    &-btn {
-      @include mainButton;
-      background: $cyan;
-      font-size: 1.8rem;
-      line-height: 1;
-      height: 5.6rem;
-      width: 15.2rem;
-      border: 0.15rem solid $grey;
-      &:hover {
-        border: 0.1rem solid $black;
-        background-color: $black;
-      }
-    }
-    &-img {
-      width: 60rem;
-      height: 56rem;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      &-girl {
-        position: relative;
-        z-index: 2;
-      }
-      &-shadow {
-        position: relative;
-        bottom: 22%;
-        left: 3%;
-        z-index: 0;
-      }
-    }
   }
 }
 
@@ -162,54 +32,6 @@
     &-title {
       @include border-top;
     }
-
-    &-header {
-      background-position: bottom;
-      background-position-x: 40%;
-    }
-
-    &-list {
-      &-block {
-        width: 60%;
-      }
-    }
-  }
-
-  .maintenance {
-    &-imgGirl {
-      left: 30%;
-      height: 75%;
-      width: 65%;
-    }
-  }
-}
-
-@media (max-width : 750px) {
-  .maintenance {
-    &-imgGirl {
-      left: 40%;
-      height: 65%;
-      width: 55%;
-    }
-  }
-
-  .page {
-    &-list {
-      &-block {
-        width: 60%;
-      }
-    }
-  }
-
-  .support {
-    &-care {
-      &-block {
-        width: 50%;
-      }
-      &-title {
-        font-size: 7rem;
-      }
-    }
   }
 }
 
@@ -220,80 +42,11 @@
       font-size: 7rem;
     }
   }
-
-  .maintenance {
-    &-imgGirl {
-      left: 40%;
-      height: 55%;
-      width: 60%;
-    }
-  }
 }
 
 @media (max-width : 550px) {
   .desktop {
     display: none;
-  }
-
-  .page {
-    &-list {
-      &-block {
-        width: 100%;
-      }
-      &-blueTitle {
-        text-align: center;
-        font-size: 7.5rem;
-      }
-      &-title {
-        font-size: 5rem;
-      }
-      &-img {
-        width: 6rem;
-        height: 6rem;
-      }
-      &-text {
-        font-size: 4.5rem;
-      }
-    }
-  }
-
-  .support {
-    &-care {
-      height: auto;
-      &-cont {
-        flex-direction: column;
-      }
-      &-block {
-        width: 100%;
-        text-align: center;
-        align-items: center;
-      }
-      &-title {
-        font-size: 10rem;
-      }
-      &-text {
-        font-size: 4rem;
-      }
-      &-btn {
-        width: 23.8rem;
-        height: 8.3rem;
-        font-size: 3.3rem;
-      }
-    }
-  }
-
-  .maintenance {
-    &-list {
-      display: flex;
-      flex-direction: column-reverse;
-    }
-    &-imgGirl {
-      position: relative;
-      align-self: center;
-      left: initial;
-      height: 100%;
-      width: 100%;
-    }
   }
 }
 
@@ -303,21 +56,10 @@
   }
 
   .page {
-    &-header {
-      height: 24.75rem;
-    }
-
-    &-blueBtn {
-      height: 8rem;
-      width: 50rem;
-      position: relative;
-      left: 35.5%;
-      font-size: 3rem;
-
-      &-arrow {
-        width: 6rem;
-        height: 6rem;
-        object-fit: contain;
+    &-headerConsultation {
+      &-blueBtn {
+        font-size: 3rem;
+        width: 55rem;
       }
     }
   }
