--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -1,118 +1,18 @@
 @import "utils/typography";
 @import "utils/vars";
 
+@import "integrations/integrations-third-screen";
+
 .tablet {
   display: none;
 }
 
 .page {
-  &-header {
-    background-image: url("../img/support/support.png");
-    background-size: cover;
-    height: 12.4rem;
-    display: flex;
-    align-items: center;
-  }
-
-  &-blueBtn {
-    @include page-blueBtn;
-    height: 6.75rem;
-    width: 34.6rem;
-    position: relative;
-    left: 54.5%;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    &-arrow {
-      width: 3rem;
-      height: 3rem;
-      object-fit: contain;
-    }
-  }
-
-  &-list {
-    &-list {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.5rem;
-    }
-    &-cont {
-      padding-top: 3.75rem;
-      padding-bottom: 3.75rem;
-      color: $dark;
-    }
-
-    &-block {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.5rem;
-      width: 40%;
-    }
-
-    &-blueTitle {
-      color: $cyan;
-      font-weight: 500;
-      font-size: 5rem;
-      line-height: 1;
-      padding-bottom: 2.5rem;
-    }
-
-    &-title {
-      font-weight: 500;
-      font-size: 3.12rem;
-      line-height: 1.2;
-    }
-
-    &-img {
-      width: 2.5rem;
-      height: 2.5rem;
-      object-fit: cover;
-      position: relative;
-      top: 0.7rem;
-    }
-
-    &-item {
-      display: flex;
-      column-gap: 1.75rem;
-    }
-
-    &-text {
-      @include page-list-text;
-    }
+  &-pros {
+    @include border-bottom;
   }
 }
 
-.integrations {
-  &-content {
-    @include border-top;
-    color: $dark;
-    height: 78.1rem;
-    &-block {
-      width: 55%;
-    }
-    &-cont {
-      padding-top: 3.75rem;
-      padding-bottom: 4.62rem;
-      display: flex;
-    }
-    &-title {
-      font-weight: 500;
-      font-size: 5rem;
-      line-height: 1;
-      color: $cyan;
-      padding-bottom: 3.75rem;
-    }
-  }
-}
-
-.content {
-  &-img {
-    &-block {
-      background: radial-gradient(50% 50% at 50% 50%, rgba(0, 178, 255, 0.2) 0%, rgba(90, 206, 255, 0) 100%);
-    }
-  }
-}
 
 @media (max-width : 1024px) {
   html {
@@ -135,26 +35,8 @@
     &-title {
       @include border-top;
     }
-
-    &-header {
-      background-position: bottom;
-      background-position-x: 40%;
-    }
   }
 
-  .integrations {
-    &-content {
-      background-image: url("../img/integrations/cubes.png");
-      background-repeat: no-repeat;
-      background-size: 60%;
-      background-position-x: 110%;
-      background-position-y: 40%;
-      height: auto;
-      &-block {
-        width: 60%;
-      }
-    }
-  }
 }
 
 @media (max-width : 650px) {
@@ -169,51 +51,5 @@
 @media (max-width : 500px) {
   html {
     font-size: 4px;
-  }
-
-  .page {
-    &-header {
-      height: 24.75rem;
-    }
-
-    &-blueBtn {
-      height: 8rem;
-      width: 40rem;
-      position: relative;
-      left: 35.5%;
-      font-size: 3rem;
-
-      &-arrow {
-        width: 6rem;
-        height: 6rem;
-        object-fit: contain;
-      }
-    }
-
-    &-list {
-      &-img {
-        width: 6rem;
-        height: 6rem;
-      }
-      &-text {
-        font-size: 4.5rem;
-      }
-    }
-  }
-
-  .integrations {
-    &-content {
-      background-size: 120%;
-      background-position-x:center;
-      background-position-y: -5%;
-      height: 270rem;
-      &-block {
-        width: 100%;
-        padding-top: 105.5rem;
-      }
-      &-title {
-        font-size: 7.5rem;
-      }
-    }
   }
 }
