About: set up this page on files

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,6 +1,11 @@
 @import "utils/typography";
 @import "utils/vars";
 
+@import "about/about-first-screen";
+@import "about/about-second-screen";
+@import "about/about-third-screen";
+@import "about/about-fourth-screen";
+
 .about {
     display: flex;
     flex-direction: column;
@@ -10,79 +15,12 @@
         &-cont {
             align-self: center;
         }
-        &-cont4 {
-            padding-left: 15rem;
-            width: 50%;
-        }
     }
-    &-block1 {
-        background-color: $black;
-        background-image: url("../img/about/about-bgd1.png");
-        color: $white;
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: contain;
-    }
-    &-block2 {
-        color: $dark;
-        display: grid;
-        grid-template-rows: repeat(2, auto);
-        grid-template-columns: repeat(2, auto);
-        &-imgHand {
-            position: relative;
-            z-index: 1;
-            animation: hand 3s;
-        }
-        &-imgPlant {
-            position: relative;
-            z-index: 0;
-            left: -60%;
-            top: -80%;
-            height: 130%;
-            animation: sizes 3s;
-        }
-    }
-    &-block3 {
-        background-image: url("../img/about/about-bgd2.png");
-        color: $white;
-        background-repeat: no-repeat;
-        position: relative;
-        z-index: 1;
-        display: block;
-        &-imgMan {
-            height: 80%;
-            position: relative;
-            top: -19%;
-            left: 25%;
-            z-index: 1;
-            animation: men 3s;
-        }
-        &-imgGrass {
-            height: 53.8rem;
-            position: relative;
-            top: -50%;
-            z-index: 0;
-            animation: down 3s;
-        }
-    }
-    &-block4 {
-        color: $dark;
-        background-color: $white;
-        position: relative;
-        z-index: 5;
-        &-img {
-            &-mans {
-                overflow: hidden;
-            }
-        }
-    }
-
     &-tittle {
         font-weight: 500;
         font-size: 5rem;
         line-height: 1;
     }
-
     &-bluText {
         font-weight: 350;
         font-size: 2.5rem;
@@ -102,39 +40,6 @@
         display: flex;
         flex-direction: column;
         row-gap: 6.25rem;
-    }
-    &-cont1 {
-        width: 50%;
-    }
-    &-cont2 {
-        padding-top: 10.75rem;
-        position: relative;
-        z-index: 3;
-    }
-    &-text2 {
-        width: 60%;
-        justify-self: center;
-        position: relative;
-        z-index: 3;
-        top: -40%;
-    }
-    &-cont3 {
-        width: 40%;
-        position: relative;
-        left: 50%;
-        top: 30%;
-    }
-}
-
-.block4 {
-    &-img {
-        &-mans {
-            height: 75%;
-            align-self: center;
-        }
-        &-manDance {
-
-        }
     }
 }
 
@@ -165,58 +70,6 @@
     .about {
         &-block {
             height: 93.3rem;
-
-            &-cont4 {
-                width: 100%;
-                padding-left: 4rem;
-            }
-        }
-
-        &-block1 {
-            background-position: 175%;
-        }
-
-        &-block2 {
-            &-imgPlant {
-                top: -30%;
-            }
-        }
-
-        &-block3 {
-            background-size: cover;
-            &-imgMan {
-                height: 85%;
-                left: 10%;
-                top: -29%;
-            }
-            &-imgGrass {
-                top: -65%;
-                height: 33.16rem;
-            }
-        }
-
-        &-cont3 {
-            top: 25%;
-            width: 50%;
-            left: 40%;
-        }
-
-        &-text-2 {
-            padding-left: 4rem;
-            justify-self: flex-start;
-        }
-    }
-
-    .block4 {
-        &-img {
-            &-mans {
-                position: relative;
-                object-fit: cover;
-                height: 120%;
-                top: 30%;
-                object-position: left;
-                overflow: hidden;
-            }
         }
     }
 }
@@ -227,75 +80,11 @@
     }
 
     .about {
-        &-block1 {
-            height: 241rem;
-            background-position: top;
-            background-size: 140%;
-        }
-        &-block2 {
-            height: 190rem;
-            &-imgHand {
-                grid-area: 1 / 1 / 3 / 3;
-                height: 69.25rem;
-                width: 130rem;
-                object-fit: cover;
-                object-position: right;
-                z-index: 6;
-            }
-            &-imgPlant {
-                top: 10%;
-                grid-area: 2 / 1 / 3 / 3;
-                left: 30%;
-                overflow: hidden;
-                width: 70%;
-            }
-        }
-        &-block3 {
-            height: 244.75rem;
-            background-color: $black;
-            background-position-x: 65%;
-            background-size: 320%;
-            &-imgMan {
-                height: 133rem;
-                top: -26.4%;
-                left: -5%;
-            }
-            &-imgGrass {
-                top: -40%;
-            }
-        }
-        &-block4 {
-            height: 184.25rem;
-            display: flex;
-            flex-direction: column-reverse;
-        }
         &-cont {
             width: 100%;
         }
-        &-cont1 {
-            position: relative;
-            top: 50rem;
-            box-shadow: 0 -10rem 10rem 5rem #000;
-        }
-        &-cont2 {
-            grid-area: 3 / 1 / 4 / 3;
-            padding-left: 4rem;
-            padding-top: 0;
-        }
-        &-cont3 {
-            top: 61%;
-            left: 0;
-            padding-left: 4rem;
-        }
-        &-cont4 {
-            width: 100%;
-            padding-left: 4rem;
-        }
         &-tittle {
             font-size: 7.5rem;
-        }
-        &-tittle2 {
-            width: 65%;
         }
         &-bluText {
             font-size: 4.5rem;
@@ -303,62 +92,5 @@
         &-text {
             font-size: 5rem;
         }
-        &-text2 {
-            width: 100%;
-            padding-left: 4rem;
-            justify-self: flex-start;
-            grid-area: 4 / 1 / 5 / 3;
-        }
     }
-
-    .block4 {
-        &-img {
-            &-mans {
-                height: 82rem;
-                top: -10%;
-                object-position: center;
-            }
-        }
-    }
-}
-
-@keyframes sizes {
-    from {
-        top: -65%;
-    }
-    to {
-        top: -80%;
-    }
-}
-
-@keyframes hand {
-    from {
-        left: -20%;
-    }
-    to {
-        left: 0;
-    }
-}
-
-@keyframes down {
-    from {
-        top: -60%;
-    }
-    to {
-        top: -50%;
-    }
-}
-
-@keyframes men {
-    from {
-        height: 200%;
-        top: -20%;
-        left: -20%;
-    }
-    to {
-        height: 80%;
-        top: -19%;
-        left: 25%;
-    }
-
 }
