Blog: set up this page on files. added hover on class connection-block-icon

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -1,74 +1,12 @@
 @import "utils/typography";
 @import "utils/vars";
 
+@import "blog/blog-bigNews";
+@import "blog/blog-content-item";
+
 .page {
   &-title {
     padding-bottom: 4rem;
     padding-top: 0;
-  }
-}
-
-.blog {
-  display: flex;
-  flex-direction: column;
-
-  &-content {
-    margin-bottom: 2.5rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2.5rem;
-    &-bigNews {
-      height: 54.6rem;
-      grid-column: 1 / 3;
-    }
-    &-item {
-      display: flex;
-      flex-direction: column;
-      height: 54.6rem;
-    }
-    &-img {
-      width: 100%;
-    }
-    &-label {
-      display: flex;
-      flex-direction: column;
-      padding: 2.5rem 3.12rem;
-      row-gap: 3.12rem;
-    }
-    &-text {
-      color: $dark;
-      font-weight: 500;
-      font-size: 2.64rem;
-      line-height: 1.2;
-    }
-    &-data {
-      color: #B6B6B6;
-      font-weight: 350;
-      font-size: 1.87rem;
-      line-height: 1;
-    }
-  }
-}
-
-.content {
-  &-bigNews {
-    &-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    &-label {
-      width: 50.5%;
-      height: 31%;
-      display: flex;
-      flex-direction: column;
-      padding: 2.5rem 3.12rem;
-      row-gap: 3.1rem;
-      position: relative;
-      bottom: 100%;
-      transform: translate(0,224%);
-      z-index: 2;
-      background-color: #fff;
-    }
   }
 }
