--- a/src/scss/optimization.scss
+++ b/src/scss/optimization.scss
@@ -70,7 +70,9 @@
     }
     &-img {
       width: 3rem;
-      height: 3rem;
+      height: 1.5rem;
+      object-fit: cover;
+      align-self: center;
     }
     &-text {
       font-weight: 350;
