--- a/src/scss/optimization.scss
+++ b/src/scss/optimization.scss
@@ -42,6 +42,7 @@
       display: flex;
       flex-direction: column;
       row-gap: 3.75rem;
+      align-self: flex-start;
     }
   }
 
@@ -132,6 +133,10 @@
       line-height: 1.2;
     }
   }
+}
+
+.connection-block {
+  margin-top: 3.75rem;
 }
 
 @media (max-width : 1024px) {
