--- a/src/scss/optimization/optimization-nav-block.scss
+++ b/src/scss/optimization/optimization-nav-block.scss
@@ -7,6 +7,7 @@
       flex-direction: column;
       row-gap: 2.5rem;
       padding-bottom: 5rem;
+      padding-top: 5rem;
     }
     &-img {
       width: 3rem;
