--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -1,41 +1,9 @@
 @import "utils/typography";
 @import "utils/vars";
 
-.svg {
-  &-arrow {
-    &-slider {
-      @include arrow-slider;
-    }
-    &-sliderNext {
-      transform: rotate(180deg);
-    }
-  }
-}
-
-.page {
-  &-arrow {
-    height: 1.75rem;
-  }
-
-  &-cases {
-    &-swiper {
-      display: flex;
-      column-gap: 2.3rem;
-      padding-bottom: 3.75rem;
-      align-items: center;
-    }
-  }
-
-  &-look {
-    &-href {
-      font-weight: 350;
-      font-size: 1.9rem;
-      line-height: 1.1;
-      color: #01C2FF;
-      text-decoration: underline;
-    }
-  }
-}
+@import "project/project-first-screen";
+@import "project/project-info";
+@import "project/project-third-screen";
 
 .project {
   background-color: #EAF1FB;
@@ -47,30 +15,6 @@
     color: $dark;
     column-gap: 2.6rem;
   }
-  &-logo {
-    width: 40.25rem;
-    object-fit: cover;
-  }
-  &-content {
-    display: flex;
-    flex-direction: column;
-    row-gap: 5rem;
-    &-text {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 1.5;
-    }
-    &-adaptation {
-      display: flex;
-      border-bottom: 0.1rem solid #D3DCE8;
-      padding-bottom: 3.75rem;
-    }
-    &-result {
-      display: flex;
-      flex-direction: column;
-      row-gap: 5rem;
-    }
-  }
   &-aside {
     display: flex;
     flex-direction: column;
@@ -78,101 +22,6 @@
     position: relative;
     top: -15rem;
   }
-  &-info {
-    background: #FAFAFA;
-    padding: 2.5rem;
-    display: flex;
-    flex-direction: column;
-    row-gap: 2.5rem;
-    border: 0.1rem solid $grey;
-    &-item {
-      display: flex;
-      column-gap: 1rem;
-      a {
-        color: #7399EC;
-        text-decoration: underline;
-      }
-    }
-  }
-  &-screen {
-    position: relative;
-    top: -30rem;
-    display: flex;
-    flex-direction: column;
-    row-gap: 3.75rem;
-    margin-bottom: -30rem;
-  }
-  &-img {
-    width: 68%;
-  }
-}
-
-.content {
-  &-adaptation {
-    &-title {
-      font-weight: 500;
-      font-size: 5rem;
-      line-height: 1;
-      padding-bottom: 2.25rem;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 1.5;
-    }
-    &-block {
-      width: 50%;
-    }
-  }
-
-  &-result {
-    &-title {
-      font-weight: 500;
-      font-size: 5rem;
-      line-height: 1;
-      text-align: center;
-    }
-    &-block {
-      display: flex;
-      justify-content: space-between;
-    }
-  }
-}
-
-.result {
-  &-block {
-    &-title {
-      font-weight: 600;
-      font-size: 4.3rem;
-      line-height: 1.5;
-      color: #FF7200;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 1.75rem;
-      line-height: 1.5;
-    }
-  }
-}
-
-.info {
-  &-item {
-    &-title {
-      font-weight: 600;
-      font-size: 2rem;
-      line-height: 1.56;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2rem;
-      line-height: 1.56;
-    }
-  }
-}
-
-.swiper-arrows {
-  display: flex;
-  column-gap: 2.4rem;
 }
 
 @media (max-width : 1024px) {
@@ -188,17 +37,6 @@
 }
 
 @media (max-width : 720px) {
-  .content {
-    &-adaptation {
-      &-img {
-        display: none;
-      }
-      &-block {
-        width: 100%;
-      }
-    }
-  }
-
   .project {
     height: 110rem;
     &-aside {
