--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -1,282 +1,38 @@
 @import "utils/typography";
 @import "utils/vars";
 
+@import "contacts/contacts-first-screen";
+@import "contacts/contacts-second-screen";
+@import "contacts/contacts-third-screen";
+@import "contacts/contacts-fourth-screen";
+
 .tablet {
   display: none;
 }
 
-.page {
-  &-blueBtn {
-    @include mainButton;
-    line-height: 1;
-    border-radius: 3px;
-  }
-}
-
 .contacts {
-  //background-image: url("../img/contacts/map.png");
-  //background-repeat: no-repeat;
-  //background-position: bottom;
-  //background-size: cover;
-
-  //display: flex;
-  //border-top: 0.1rem solid #d9d9d9;
   display: flex;
   flex-direction: column;
-  //display: grid;
-  //grid-template-columns: repeat(2, auto);
-  //grid-template-rows: repeat(2, auto);
-
   &-block {
     display: flex;
     &-cont {
-      //grid-area: 1 / 1 / 2 / 2;
       display: flex;
       flex-direction: column;
       color: $dark;
       width: 66%;
     }
     &-bgd {
-      //grid-area: 2 / 1 / 3 / 3;
       position: unset;
       z-index: 0;
     }
-    &-form {
-      //grid-area: 1 / 2 / 3 / 3;
-      position: absolute;
-      left: 66%;
-      z-index: 2;
-      height: 128rem;
-      background-color: #474747;
-      color: #B6B6B6;
-      transform: translate(-25%);
-      width: 34%;
-      padding: 5rem 4.5rem 2.45rem 4.3rem;
-    }
   }
-
-  &-main {
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 8.6rem;
-    &-tools {
-      display: flex;
-      justify-content: space-between;
-      width: 66%;
-      &-item {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  }
-
-  &-requisites {
-    display: flex;
-    column-gap: 3.1rem;
-    align-items: center;
-    padding-bottom: 7.5rem;
-    &-text {
-      font-weight: 350;
-      font-size: 1.8rem;
-      line-height: 1;
-      width: 42.1rem;
-    }
-  }
-
-  &-address {
-    padding-bottom: 5.5rem;
-    display: flex;
-    gap: 4.5rem;
-    &-item {
-      width: 46rem;
-    }
-  }
-
   &-bgd {
     height: 32.1rem;
     width: 100%;
     object-fit: cover;
   }
-
-  &-form {
-    &-secure {
-      display: flex;
-      column-gap: 4.7rem;
-      justify-content: center;
-      padding-top: 2rem;
-      border-top: 0.1rem solid #5E5E5E;
-      margin-top: 3.25rem;
-    }
-    &-text {
-      font-weight: 500;
-      font-size: 1.8rem;
-      line-height: 1;
-      &-data {
-        width: 43.1rem;
-      }
-    }
-    &-title {
-      font-weight: 350;
-      font-size: 5rem;
-      line-height: 1;
-      color: $white;
-    }
-    &-form {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2rem;
-      padding-top: 2rem;
-    }
-    &-label {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 2;
-      display: flex;
-      flex-direction: column;
-      row-gap: 2rem;
-      color: $white;
-    }
-    &-input {
-      width: 48.1rem;
-      height: 6.75rem;
-      background-color: $grey;
-      padding: 2.25rem 2.5rem;
-    }
-    &-inputMessage {
-      background-color: $grey;
-      width: 48.1rem;
-      height: 24.1rem;
-    }
-    &-data {
-      display: flex;
-      column-gap: 2.6rem;
-      padding-bottom: 3.25rem;
-    }
-    &-textLine {
-      color: $white;
-      text-decoration: underline;
-      cursor: pointer;
-      :focus:hover:visited {
-        color: #AFC8FF;
-      }
-    }
-    &-checkbox {
-      width: 2rem;
-      height: 2rem;
-      position: relative;
-      top: 0.5rem;
-      background-color: $white;
-      color: #F1F1F1;
-      border-radius: 1.5px;
-      :hover:checked {
-        background-color: $cyan;
-        color: $white;
-      }
-      //&-default {
-      //  display: none;
-      //}
-    }
-    &-btn {
-      width: 23rem;
-      height: 8rem;
-      border: 1px solid $white;
-      border-radius: 3px;
-      padding: 2.75rem 2.5rem;
-      background-color: transparent;
-      color: $white;
-      font-weight: 400;
-      font-size: 2.5rem;
-      line-height: 1;
-      display: flex;
-      justify-content: space-between;
-    }
-    &-img {
-      width: 3rem;
-      height: 3rem;
-      object-fit: cover;
-    }
-  }
-
 }
 
-.main {
-  &-tools {
-    &-item {
-      display: flex;
-      flex-direction: column;
-    }
-    &-title {
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1.2;
-      padding-bottom: 2.8rem;
-    }
-    &-img {
-      width: 3rem;
-      height: 3rem;
-      object-fit: cover;
-      position: relative;
-      bottom: 6%;
-      &-calendar {
-        width: 3rem;
-        height: 3rem;
-        object-fit: cover;
-        position: relative;
-        top: 12%;
-      }
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 1;
-      margin-bottom: 4.5rem;
-      &-block {
-        display: flex;
-      }
-    }
-    &-span {
-      font-weight: 600;
-      font-size: 2.25rem;
-      line-height: 1.16;
-    }
-    &-info {
-      display: flex;
-      column-gap: 1.25rem;
-    }
-  }
-}
-
-.address {
-  &-item {
-    &-title {
-      font-weight: 500;
-      font-size: 3.1rem;
-      line-height: 1.2;
-      padding-bottom: 4.5rem;
-    }
-    &-text {
-      font-weight: 350;
-      font-size: 2.25rem;
-      line-height: 2;
-    }
-  }
-}
-
-.form {
-  &-secure {
-    &-img {
-      width: 5rem;
-      height: 5rem;
-      object-fit: cover;
-    }
-    &-text {
-      color: $cyan;
-      font-weight: 350;
-      font-size: 1.8rem;
-      line-height: 1;
-    }
-  }
-}
 
 @media (max-width : 1024px) {
   html {
@@ -305,68 +61,10 @@
         width: 100%;
       }
     }
-
-    &-main {
-      &-tools {
-        width: 100%;
-      }
-    }
-
-    &-requisites {
-      &-text {
-        width: 70%;
-        font-size: 2.5rem;
-      }
-    }
-
-    &-address {
-      justify-content: space-between;
-      &-item {
-        width: 50%;
-      }
-    }
   }
-
 }
 
 @media (max-width : 525px) {
-
-
-  .contacts {
-    //&-block {
-    //  display: flex;
-    //  flex-direction: column;
-    //  &-cont {
-    //    width: 100%;
-    //  }
-    //}
-
-    &-requisites {
-      flex-direction: column;
-      row-gap: 4.1rem;
-      &-text {
-        width: 100%;
-        text-align: center;
-      }
-    }
-
-    &-address {
-      flex-direction: column;
-      &-item {
-        width: 100%;
-      }
-    }
-
-    &-main {
-      &-tools {
-        flex-direction: column;
-        row-gap: 9rem;
-        padding-top: 5rem;
-        align-items: center;
-      }
-    }
-  }
-
   .page {
     &-title {
       text-align: center;
@@ -376,5 +74,4 @@
       }
     }
   }
-
 }
