--- a/src/scss/crm-implement/crm-implement-third-screen.scss
+++ b/src/scss/crm-implement/crm-implement-third-screen.scss
@@ -6,25 +6,23 @@
     &-rates {
       background-image: url("../../img/crm/Frame-209.png");
       background-repeat: no-repeat;
-      display: flex;
       height: 24.75rem;
+      background-size: cover;
       &-img {
         position: relative;
-        left: 25%;
-        height: 27.25rem;
         top: -10%;
+        height: 27.25rem;
       }
       &-cont {
         padding-top: 3.75rem;
         padding-bottom: 3rem;
         color: $white;
+        display: flex;
       }
       &-block {
         display: flex;
         flex-direction: column;
         row-gap: 2.5rem;
-        position: relative;
-        left: 30%;
         width: 70%;
       }
     }
@@ -64,7 +62,6 @@
           left: 5%;
         }
         &-block {
-          left: 5%;
           width: 90%;
           row-gap: 1.5rem;
         }
@@ -93,11 +90,12 @@
     &-implement {
       &-rates {
         height: auto;
-        flex-direction: column;
-        background-size: cover;
         background-position-x: 10%;
-        row-gap: 2rem;
         padding-top: 2.5rem;
+        &-cont {
+          flex-direction: column;
+          row-gap: 2rem;
+        }
         &-img {
           left: 50%;
           top: 0;
@@ -108,7 +106,6 @@
         }
         &-block {
           width: 100%;
-          left: 0;
           align-items: center;
         }
       }
