--- a/src/scss/crm-implement/crm-implement-third-screen.scss
+++ b/src/scss/crm-implement/crm-implement-third-screen.scss
@@ -10,7 +10,7 @@
       background-size: cover;
       &-img {
         position: relative;
-        top: -10%;
+        top: -6.3rem;
         height: 27.25rem;
       }
       &-cont {
