Crm-implement. Changed some properties in file crm-implement-third-screen.scss and html

--- a/src/scss/crm-implement/crm-implement-third-screen.scss
+++ b/src/scss/crm-implement/crm-implement-third-screen.scss
@@ -18,6 +18,7 @@
         padding-bottom: 3rem;
         color: $white;
         display: flex;
+        justify-content: center;
       }
       &-block {
         display: flex;
