--- a/src/scss/mobile/mobile-content.scss
+++ b/src/scss/mobile/mobile-content.scss
@@ -16,8 +16,8 @@
     &-img {
       position: relative;
       z-index: 2;
-      object-fit: cover;
       overflow: hidden;
+      object-fit: contain;
     }
     &-imgBgd {
       position: relative;
@@ -53,7 +53,7 @@
       height: 77.25rem;
       position: relative;
       animation: showOpacity 1s;
-      object-fit: cover;
+      object-fit: contain;
       overflow: hidden;
       &-right {
         left: 50%;
@@ -91,9 +91,9 @@
 
   .item {
     &-block {
-      &-contLeft {
-        left: 5%;
-      }
+      //&-contLeft {
+      //  left: 5%;
+      //}
       &-contRight {
         top: -55rem;
       }
