--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     &-block {
-        height: 104.37rem;
         display: flex;
         &-cont {
             align-self: center;
@@ -66,15 +65,17 @@
             display: none;
         }
     }
+}
 
+@media (max-width : 800px) {
     .about {
-        &-block {
-            height: 93.3rem;
+        &-text {
+            font-size: 2.5rem;
         }
     }
 }
 
-@media (max-width : 400px) {
+@media (max-width : 530px) {
     html {
         font-size: 4px;
     }
