--- a/src/scss/about/about-first-screen.scss
+++ b/src/scss/about/about-first-screen.scss
@@ -6,13 +6,14 @@
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
+    height: 104.37rem;
   }
   &-cont1 {
     width: 50%;
   }
 }
 
-@media (max-width : 1024px) {
+@media (max-width : 1100px) {
   .about {
     &-block1 {
       background-position: 175%;
@@ -20,17 +21,32 @@
   }
 }
 
-@media (max-width : 400px) {
+@media (max-width : 800px) {
   .about {
     &-block1 {
-      height: 241rem;
+      background-size: 130%;
+      background-position-y: 0;
+      background-position-x: 20%;
+    }
+    &-text1 {
+      font-size: 2.5rem;
+    }
+  }
+}
+
+@media (max-width : 530px) {
+  .about {
+    &-block1 {
+      overflow: hidden;
       background-position: top;
       background-size: 140%;
+      height: 241rem;
     }
     &-cont1 {
       position: relative;
       top: 50rem;
-      box-shadow: 0 -10rem 10rem 5rem #000;
+      box-shadow: 0 -10rem 10rem 5rem $black;
+      background: $black;
     }
   }
 }
