--- a/src/scss/about/about-second-screen.scss
+++ b/src/scss/about/about-second-screen.scss
@@ -2,11 +2,12 @@
 
 .about {
   &-block2 {
-    height: 104.37rem;
     color: $dark;
     display: grid;
     grid-template-rows: repeat(2, auto);
     grid-template-columns: repeat(2, auto);
+    overflow: hidden;
+    height: 104.37rem;
     &-imgHand {
       position: relative;
       z-index: 1;
@@ -50,7 +51,7 @@
 }
 
 
-@media (max-width : 400px) {
+@media (max-width : 530px) {
   .about {
     &-block2 {
       height: 190rem;
@@ -63,10 +64,9 @@
         z-index: 6;
       }
       &-imgPlant {
-        top: 10%;
+        top: 0;
         grid-area: 2 / 1 / 3 / 3;
         left: 30%;
-        overflow: hidden;
         width: 70%;
       }
     }
@@ -82,7 +82,7 @@
       width: 100%;
       padding-left: 4rem;
       justify-self: flex-start;
-      grid-area: 4 / 1 / 5 / 3;
+      grid-area: 5 / 1 / 6 / 3;
     }
   }
 }
