--- a/src/scss/all-pages/feedback-form.scss
+++ b/src/scss/all-pages/feedback-form.scss
@@ -33,7 +33,7 @@
       }
     }
   }
-  &-form{
+  &-form {
     display: none;
     background-color: #5a5a5a;
     padding: 3rem;
@@ -113,6 +113,77 @@
     }
     &-agreement-text{
       padding: 0 1rem;
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  .feedback-inner {
+    padding: 5rem;
+  }
+  .feedback {
+    &-text {
+      font-size: 5rem;
+      color: #696969;
+      text-align: center;
+    }
+    &-arrow {
+      margin: 5rem auto;
+    }
+    &-form {
+      width: 100%;
+      background: #5A5A5A;
+      box-shadow: 0 0 108px rgba(0, 0, 0, 0.4);
+      border-radius: 5px;
+      &-wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-areas:
+      'name'
+      'mail'
+      'tel'
+      'area';
+        gap: 7.5rem;
+        margin-bottom: 3rem;
+      }
+
+      &-input {
+        height: 20rem;
+        background: rgba(255, 255, 255, 0.12);
+        border: 1px solid #858585;
+        border-radius: 3px;
+        font-size: 5rem;
+        padding: 3rem 5rem;
+      }
+      &-textarea {
+        height: 20rem;
+        background: rgba(255, 255, 255, 0.12);
+        border: 1px solid #858585;
+        border-radius: 3px;
+        font-size: 5rem;
+        padding: 3rem 5rem;
+      }
+      &-agreement-text {
+        font-size: 4.5rem;
+        & a {
+          font-size: 4.5rem;
+        }
+      }
+      &-bottom {
+        justify-content: center;
+        flex-direction: column;
+        gap: 5rem;
+      }
+      &-btn {
+        width: 55rem;
+        height: 16rem;
+        font-size: 5rem;
+        background: linear-gradient(218.86deg, #5AD7FF 26.16%, #00C2FF 84.59%);
+        border-radius: 3px;
+      }
+    }
+    &-tel {
+      height: 22rem;
     }
   }
 }
